[tool.poetry]
name = "01-selling-cars-analize"
version = "0.1.0"
description = ""
authors = ["Rafal Kowalski <rafal.kowalski@rkowalski.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
SQLAlchemy = "^2.0.36"
pydantic = "^2.9.2"
jupyterlab = "^4.2.5"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
autopep8 = "^2.3.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
